--- a/style.css
+++ b/style.css
@@ -1,3 +1,116 @@
+body {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #AE7C78;
+    background: #ffffff;
+}
+
+header {
+    line-height: 19.5px;
+}
+nav.main-menu {
+    border-top: 1px solid #AE7C78;
+    border-bottom: 1px solid #AE7C78;
+}
+     
+nav.main-menu ul li {
+    list-style: none;
+    display: inline;    
+ }
+
+.logo-header {
+    text-align: center;
+    }
+
+.introduction {
+    width: 384px;
+}
+
+.introduction p,
+.sale p {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 24px;
+    line-height: 29px; 
+}
+
+h1,
+.sale h2 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 59px;
+}
+
+span.italic {
+    font-style: italic;
+}
+
+.advantage h3,
+.order-steps h3 {
+    font-weight: 500;
+}
+
+.advantage div {
+   display: inline-block;
+   width: 285px;
+   vertical-align: top;
+   margin: 20px;
+}
+
+h2 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 48px;
+    text-align: center;
+}
+
+.popular-item h3 {
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.price {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.catalogue div {
+    width: 388px;
+    height: 442px;
+    display: inline-block; 
+    margin: 19px;
+    padding: 0;
+}
+
+.catalogue a h2 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 48px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.catalogue a p {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+
+.order-steps div {
+    display: inline-block;
+    vertical-align: top;
+    width: 285px;
+    text-align: center;
+}
+
 .visually-hidden {
     display: none;
 }
