--- a/style.css
+++ b/style.css
@@ -2,63 +2,62 @@ body {
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 16px;
     line-height: 20px;
+    font-weight: normal;
     color: #AE7C78;
     background: #ffffff;
+    width: 1400px;
 }
-
+.visually-hidden {
+    display: none;
+}
 header {
     line-height: 19.5px;
 }
 nav.main-menu {
     border-top: 1px solid #AE7C78;
     border-bottom: 1px solid #AE7C78;
-}
-     
+}   
 nav.main-menu ul li {
     list-style: none;
     display: inline;    
- }
-
+}
 .logo-header {
     text-align: center;
     }
-
 .introduction {
     width: 384px;
 }
-
-.introduction p,
+.introduction-text p,
 .sale p {
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 24px;
     line-height: 29px; 
 }
-
-h1,
-.sale h2 {
+h1 {
     font-family: "Playfair Display", "Cambria", serif;
     font-size: 44px;
     font-style: normal;
     font-weight: normal;
     line-height: 59px;
 }
-
 span.italic {
     font-style: italic;
 }
-
-.advantage h3,
-.order-steps h3 {
+h3,
+cite,
+.contacts li p:nth-child(2) {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    font-style: normal;
     font-weight: 500;
 }
-
 .advantage div {
    display: inline-block;
    width: 285px;
    vertical-align: top;
    margin: 20px;
 }
-
 h2 {
     font-family: "Playfair Display", "Cambria", serif;
     font-size: 44px;
@@ -68,18 +67,15 @@ h2 {
     line-height: 48px;
     text-align: center;
 }
-
 .popular-item h3 {
     font-weight: 500;
     font-size: 24px;
 }
-
 .price {
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
 }
-
 .catalogue div {
     width: 388px;
     height: 442px;
@@ -87,7 +83,6 @@ h2 {
     margin: 19px;
     padding: 0;
 }
-
 .catalogue a h2 {
     font-family: "Playfair Display", "Cambria", serif;
     font-weight: bold;
@@ -96,12 +91,44 @@ h2 {
     text-align: center;
     color: #FFFFFF;
 }
-
 .catalogue a p {
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 16px;
     line-height: 20px;
     color: #FFFFFF;
+}
+.sale {
+    width: 1200px;
+    height: 391px;
+    background-color: #AE7C78;
+}
+.sale p {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+    width: 387px;
+    height: 145px;
+    padding-left: 92px;
+    padding-bottom: 64px;
+}
+.sale h2 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 59px;
+    color: #FFFFFF;
+    width: 488px;
+    height: 118px;
+    text-align: left;
+    padding-left: 92px;
+    padding-top: 40px;
+}
+.sale-image {
+    float: right;
 }
 
 .order-steps div {
@@ -109,8 +136,26 @@ h2 {
     vertical-align: top;
     width: 285px;
     text-align: center;
-}
 
-.visually-hidden {
-    display: none;
+.contacts-text {
+    width: 386px;
+    height: 520px;
+    border: 1px solid #F7FAFC;
+    background-color: #F7FAFC;
+}
+footer nav {
+    width: 1440px;
+    height: 97px;
+    color: #ffffff;
+    background-color: #AE7C78;
+}
+footer li {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    list-style: none;
+    display: inline; 
+    text-align: center;
 }
