--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,45 @@ body {
     font-weight: normal;
     color: #AE7C78;
     background: #ffffff;
-    margin: 0;
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+h2 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 48px;
+    text-align: center;
+}
+
+h1 {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 59px;
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+span.italic {
+    font-style: italic;
 }
 
 .visually-hidden {
@@ -28,13 +61,10 @@ img {
 }
 
 .navigation-list {
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
-    padding: 0;
 }
 
 .navigation-item:nth-child(3) {
@@ -53,25 +83,14 @@ img {
     padding: 10px;
 }
 
-h1 {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 59px;
-    margin: 0;
-    padding: 0;
-}
-
-span.italic {
-    font-style: italic;
-}
-
 .introduction {
+    max-width: 1440px;
     display: flex;
     justify-content: center;
     align-items: start;
     margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .introduction-item {
@@ -90,12 +109,11 @@ span.italic {
     color: #FFFFFF;
     text-decoration: none;
     text-align: center;
-    padding-top: 25px;
     margin-top: 45px;
+    padding: 25px;
     display: inline-block;
     box-sizing: border-box;
     width: 285px;
-    height: 80px;
     background: #D89999;
     border: solid #D89999;
     border-radius: 40px;
@@ -113,7 +131,8 @@ span.italic {
 
 h3,
 cite,
-.contacts li p:nth-child(2) {
+.contact-card-items p:nth-child(2),
+.contact-card-link {
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 16px;
     line-height: 20px;
@@ -122,42 +141,40 @@ cite,
 }
 
 .advantage {
+    max-width: 1220px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 55px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .advantage-item {
     width: 285px;
-    margin-right: 15px;
-    padding-right: 15px;
+    padding: 10px;
 }
 
 .advantage-image {
-    padding: 15px;
-}
-
-h2 {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 48px;
-    text-align: center;
+    margin: 15px;
 }
 
 .slider {
+    width: 794px;
     margin-bottom: 80px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .popular {
     display: grid;
     grid-template-columns: repeat(2, 397px);
-    column-gap: 10px;
     justify-content: center;
     margin-top: 45px;
+}
+
+.popular-item {
+    padding: 10px;
 }
 
 .popular-item h3 {
@@ -192,6 +209,9 @@ h2 {
     gap: 19px;
     justify-content: center;
     margin-bottom: 80px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .wedding {
@@ -208,7 +228,7 @@ h2 {
 
 .catalogue-link {
     display: flex;
-    height: 442px;
+    min-height: 442px;
     flex-direction: column;
     justify-content: center;
     text-decoration: none;
@@ -236,14 +256,19 @@ h2 {
 .sale {
     display: grid;
     grid-template-columns: 600px 600px;
-    grid-template-rows: 391px;
+    grid-template-rows: auto;
     gap: 0;
+    align-items: center;
     justify-content: center;
+    background-color: #AE7C78;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 80px;
 }
 
 .sale-text {
-    background-color: #AE7C78;
+    padding: 0 93px;
 }
 
 .sale-text p {
@@ -253,8 +278,6 @@ h2 {
     font-size: 24px;
     line-height: 29px;
     color: #FFFFFF;
-    padding-left: 92px;
-    width: 387px;
 }
 
 .sale-text h2 {
@@ -265,30 +288,146 @@ h2 {
     line-height: 59px;
     color: #FFFFFF;
     text-align: left;
-    padding-left: 92px;
+}
+
+.order-steps-container {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
 }
 
 .order-steps {
     display: grid;
     grid-template-columns: repeat(4, 285px);
     justify-content: center;
-    margin-bottom: 80px;
 }
 
 .step {
     text-align: center;
+    padding: 10px;
 }
 
-.contacts-text {
+.news {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
+    display: grid;
+    grid-template-columns: 500px 285px 387px;
+    grid-template-rows: auto auto;
+    gap: 20px;
+    justify-content: center;
+}
+
+.news-text {
+    margin: 20px;
+    grid-row: span 2;
+}
+
+.news-text h2 {
+    text-align: start;
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+
+.news-text p {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 24px;
+    line-height: 20px;
+    font-weight: normal;
+    line-height: 29px;
+    width: 387px;
+}
+
+.icon {
+    margin: 10px;
+}
+
+.news-image:nth-child(4) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+
+.reference-container {
+    border: 1px solid #AE7C78;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
+}
+
+.reference-container {
+    width: 1200px;
+}
+
+.reference-container h2 {
+    margin-bottom: 0;
+}
+
+.references {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.reference-item {
+    width: 300px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.contacts {
+    position: relative;
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+    padding-bottom: 80px;
+}
+
+.map {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: -1;
+}
+
+.contact-card {
     width: 386px;
-    height: 520px;
+    margin-left: 255px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     border: 1px solid #F7FAFC;
     background-color: #F7FAFC;
+    border-radius: 12px;
+    padding: 35px 40px;
+    box-sizing: border-box;
+}
+
+.contact-card-title {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 44px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 48px;
+    text-align: left;
+    margin: 20px 0;
+}
+
+.contact-card-item {
+    padding: 0;
+    margin-bottom: 30px;
+}
+
+.contact-card-link {
+    color: #AE7C78;
 }
 
 footer nav {
     width: 1440px;
-    height: 97px;
     color: #ffffff;
     background-color: #AE7C78;
 }
@@ -299,7 +438,6 @@ footer li {
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-    list-style: none;
     display: inline;
     text-align: center;
 }
