--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ cite,
 
 .contact-card {
     width: 386px;
-    margin-left: 255px;
+    margin-left: 230px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -426,18 +426,47 @@ cite,
     color: #AE7C78;
 }
 
-footer nav {
+.footer-container {
     width: 1440px;
-    color: #ffffff;
+    min-height: 97px;
     background-color: #AE7C78;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 200px 1fr 200px;
+    align-items: center;
 }
 
-footer li {
-    font-family: Montserrat;
+.footer-logo {
+    justify-self: center;
+}
+
+.footer-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-list-item {
+    font-family: "Montserrat", "Arial", sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
-    line-height: 20px;
-    display: inline;
-    text-align: center;
+    line-height: 19px;
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    padding: 20px;
+    margin-right: 55px;
+}
+
+.icons {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.footer-icon {
+    margin: 10px;
 }
