--- a/css/style.css
+++ b/css/style.css
@@ -50,45 +50,35 @@ span.italic {
     display: none;
 }
 
-.menu-container {
+.page-header {
     line-height: 20px;
     margin-bottom: 70px;
-    width: 1440px;
+    max-width: 1440px;
     border-top: 1px solid #AE7C78;
     border-bottom: 1px solid #AE7C78;
     margin-left: auto;
     margin-right: auto;
 }
 
-.navigation-list {
+.navigation-menu {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
-}
-
-.navigation-item:nth-child(3) {
-    margin-right: 100px;
-}
-
-.navigation-item:first-child {
-    margin-left: 100px;
-}
-
-.navigation-item:last-child {
-    margin-right: 100px;
+    justify-content: space-evenly;
 }
 
 .navigation-item {
     display: block;
-    padding: 15px 20px;
+    padding: 20px 25px;
+    margin-right: 30px;
+}
+
+.navigation-item:first-child {
+    margin-left: 30px;
 }
 
 .logo {
-    display: flex;
-    justify-content: center;
-    margin-bottom: -50px;
-    padding: 10px;
+    margin-right: 20px;
 }
 
 .introduction {
