--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ span.italic {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .navigation-item {
