--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,56 @@
-body {
+h1,
+h2,
+h3 {
+    margin: 0;
+    padding: 0;
+}
+
+.font_main {
     font-family: "Montserrat", "Arial", sans-serif;
     font-size: 16px;
     line-height: 20px;
     font-weight: normal;
     color: #AE7C78;
-    background: #ffffff;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-a {
-    text-decoration: none;
-}
-
-h2 {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-size: 44px;
+.font_main_l {
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-size: 24px;
+    line-height: 29px;
     font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 48px;
-    text-align: center;
+    font-weight: normal;
+    color: #AE7C78;
 }
 
-h1 {
+.font_title_normal {
     font-family: "Playfair Display", "Cambria", serif;
     font-size: 44px;
     font-style: normal;
     font-weight: normal;
-    line-height: 59px;
-    margin: 0;
-    padding: 0;
+    line-height: 58px;
+    color: #AE7C78;
 }
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.font_title_bold {
+    font-family: "Playfair Display", "Cambria", serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 48px;
+    color: #AE7C78;
+    text-align: center;
 }
 
-span.italic {
+.semi-bold {
+    font-weight: 500;
+}
+
+.italic {
     font-style: italic;
+}
+
+.font_white {
+    color: #FFFFFF;
 }
 
 .visually-hidden {
@@ -51,126 +58,108 @@ span.italic {
 }
 
 .page-header {
-    line-height: 20px;
-    margin-bottom: 70px;
-    min-width: 1440px;
     border-top: 1px solid #AE7C78;
     border-bottom: 1px solid #AE7C78;
+    max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.navigation-menu {
+.header__navigation {
+    margin-top: 10px;
+}
+
+.header-navigation__list {
+    list-style: none;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
-.navigation-item {
-    margin-right: 30px;
+.navigation__logo {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.navigation-item:first-child {
-    margin-left: 30px;
-}
-
-.navigation-link {
+.header-navigation__link {
     display: block;
-    padding: 20px 25px;
+    padding: 10px 20px;
     text-decoration: none;
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: normal;
-    color: #AE7C78;
+    text-align: center;
 }
 
-.logo {
-    margin-right: 20px;
+.main-wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1200px;
+}
+
+.introduction-wrapper {
+    margin-top: 70px;
+    margin-bottom: 50px;
 }
 
 .introduction {
-    width: 1440px;
     display: flex;
     justify-content: center;
-    align-items: start;
-    margin-bottom: 20px;
-    margin-right: auto;
-    margin-left: auto;
+    align-items: flex-start;
 }
 
-.introduction-item {
-    padding: 10px;
+.introduction__item:nth-child(2) {
+    align-self: flex-end;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 55px;
 }
 
-.introduction-item.text {
-    width: 384px;
+.introduction__item {
+    max-width: 386px;
 }
 
-.button {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: normal;
-    color: #FFFFFF;
-    text-decoration: none;
-    text-align: center;
-    margin-top: 45px;
-    padding: 25px;
-    display: inline-block;
-    box-sizing: border-box;
+.button-wrapper {
+    margin-top: 64px;
     width: 285px;
     background: #D89999;
     border: solid #D89999;
     border-radius: 40px;
+    text-align: center;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.introduction-item.image1 {
-    margin-top: 60px;
+.button {
+    display: inline-block;
+    color: #FFFFFF;
+    text-decoration: none;
+    padding: 26px;
 }
 
-.introduction-item.text p,
-.sale p {
-    font-size: 24px;
-    line-height: 29px;
+.advantage-wrapper {
+    margin-bottom: 55px;
 }
 
-h3,
-cite,
-.contact-card-items p:nth-child(2),
-.contact-card-link {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    font-style: normal;
-    font-weight: 500;
-}
-
-.advantage {
-    min-width: 1220px;
+.advantage-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 55px;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
 }
 
 .advantage-item {
-    width: 285px;
-    padding: 10px;
+    display: flex;
 }
 
-.advantage-image {
-    margin: 15px;
+.advantage-item__text {
+    width: 284px;
+    padding-left: 20px;
 }
 
-.slider {
-    width: 794px;
+.slider-wrapper {
     margin-bottom: 80px;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .popular {
@@ -184,15 +173,9 @@ cite,
     padding: 10px;
 }
 
-.popular-item h3 {
-    font-weight: 500;
-    font-size: 24px;
-}
-
-.price {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
+.arrow {
+    border: none;
+    background-color: inherit;
 }
 
 .arrow.left {
@@ -201,12 +184,6 @@ cite,
 
 .arrow.right {
     justify-self: start;
-}
-
-.arrow a {
-    display: block;
-    padding: 15px;
-    text-decoration: none;
 }
 
 .catalogue {
@@ -221,6 +198,10 @@ cite,
     margin-left: auto;
 }
 
+.catalogue__item {
+    border-radius: 10%;
+}
+
 .wedding {
     background-image: url("../images/main/wedding.jpg");
 }
@@ -233,31 +214,19 @@ cite,
     background-image: url("../images/main/assortment.jpg");
 }
 
-.catalogue-link {
+.catalogue__link {
     display: flex;
     min-height: 442px;
     flex-direction: column;
     justify-content: center;
     text-decoration: none;
+    text-align: center;
+    border-radius: 10%;
     background-color: rgba(174, 124, 120, 0.6);
 }
 
-.catalogue h2 {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 48px;
-    text-align: center;
-    color: #FFFFFF;
-    margin: 0;
-}
-
-.catalogue p {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    color: #FFFFFF;
-    text-align: center;
+.sale__wrapper {
+    margin-bottom: 80px;
 }
 
 .sale {
@@ -268,108 +237,61 @@ cite,
     align-items: center;
     justify-content: center;
     background-color: #AE7C78;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 80px;
 }
 
 .sale-text {
     padding: 0 93px;
 }
 
-.sale-text p {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-    color: #FFFFFF;
-}
-
-.sale-text h2 {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 59px;
-    color: #FFFFFF;
-    text-align: left;
-}
-
-.order-steps-container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+.order-steps__wrapper {
     margin-bottom: 80px;
 }
 
-.order-steps {
+.order-steps__items {
     display: grid;
     grid-template-columns: repeat(4, 285px);
     justify-content: center;
+    text-align: center;
+    margin-top: 36px;
 }
 
-.step {
-    text-align: center;
-    padding: 10px;
+.news__wrapper {
+    margin-bottom: 80px;
 }
 
 .news {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 80px;
     display: grid;
-    grid-template-columns: 500px 285px 387px;
-    grid-template-rows: auto auto;
+    grid-template-columns: 500px auto auto;
+    grid-auto-flow: column;
     gap: 20px;
     justify-content: center;
 }
 
 .news-text {
-    margin: 20px;
     grid-row: span 2;
+    width: 387px;
 }
 
-.news-text h2 {
+.news-text__title {
     text-align: start;
     margin-bottom: 40px;
     margin-top: 50px;
 }
 
-.news-text p {
-    font-family: "Montserrat", "Arial", sans-serif;
-    font-size: 24px;
-    line-height: 20px;
-    font-weight: normal;
-    line-height: 29px;
-    width: 387px;
+.news-image_large {
+    grid-row: span 2;
 }
 
 .icon {
+    text-decoration: none;
     margin: 10px;
 }
 
-.news-image:nth-child(4) {
-    grid-column: 3 / 4;
-    grid-row: 1 / 3;
-}
-
-.reference-container {
+.references_wrapper {
     border: 1px solid #AE7C78;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 80px;
-}
-
-.reference-container {
-    width: 1200px;
-}
-
-.reference-container h2 {
-    margin-bottom: 0;
+    padding-top: 35px;
+    padding-bottom: 40px;
 }
 
 .references {
@@ -381,14 +303,10 @@ cite,
 .reference-item {
     width: 300px;
     text-align: center;
-    padding-bottom: 40px;
 }
 
 .contacts {
     position: relative;
-    width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 50px;
     padding-bottom: 80px;
 }
@@ -411,17 +329,6 @@ cite,
     border-radius: 12px;
     padding: 35px 40px;
     box-sizing: border-box;
-}
-
-.contact-card-title {
-    font-family: "Playfair Display", "Cambria", serif;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 48px;
-    text-align: left;
-    margin: 20px 0;
 }
 
 .contact-card-item {
