--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ h3 {
 
 .advantage-item__text {
     max-width: 284px;
+    min-width: 200px;
 }
 
 .slider-wrapper {
@@ -196,47 +197,47 @@ h3 {
     justify-self: end;
 }
 
-arrow.right {
+.arrow.right {
     justify-self: start;
 }
 
 .catalogue {
     display: grid;
-    grid-template-columns: repeat(3, 388px);
-    grid-template-rows: 442px;
-    gap: 19px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
     justify-content: center;
     margin-bottom: 80px;
-    width: 1200px;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .catalogue__item {
     border-radius: 10%;
+    min-width: 250px;
+    min-height: 440px;
 }
 
 .wedding {
-    background-image: url("../images/main/wedding.jpg");
+    background: url("../images/main/wedding.jpg") no-repeat center;
 }
 
 .peonies {
-    background-image: url("../images/main/peony.jpg");
+    background: url("../images/main/peony.jpg") no-repeat center;
 }
 
 .other {
-    background-image: url("../images/main/assortment.jpg");
+    background: url("../images/main/assortment.jpg") no-repeat center;
 }
 
 .catalogue__link {
     display: flex;
-    min-height: 442px;
     flex-direction: column;
     justify-content: center;
     text-decoration: none;
     text-align: center;
+    height: 100%;
     border-radius: 10%;
     background-color: rgba(174, 124, 120, 0.6);
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .sale__wrapper {
@@ -245,22 +246,11 @@ arrow.right {
 
 .sale {
     display: grid;
-    grid-template-columns: 600px 600px;
-    grid-template-rows: auto;
-    gap: 0;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
     align-items: center;
     justify-content: center;
     background-color: #AE7C78;
-}
-
-.sale-text {
-    padding: 0 93px;
-}
-
-.sale__image img {
-    width: 100%;
-    height: auto;
-    min-width: 500px;
 }
 
 .sale__text {
@@ -271,6 +261,16 @@ arrow.right {
     width: 400px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.sale__image {
+    text-align: center;
+    min-width: 500px;
+}
+
+.sale__image img {
+    width: 100%;
+    height: auto;
 }
 
 .order-steps__wrapper {
