--- a/css/style.css
+++ b/css/style.css
@@ -125,21 +125,33 @@ h3 {
 }
 
 .button-wrapper {
-    margin-top: 64px;
     width: 285px;
+    margin-top: 64px;
     background: #D89999;
     border: solid #D89999;
     border-radius: 40px;
     text-align: center;
     box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.3s ease;
 }
 
 .button {
     display: inline-block;
+    width: 95%;
+    padding: 25px 0;
     color: #FFFFFF;
     text-decoration: none;
-    padding: 26px;
+    border-radius: 40px;
+    box-sizing: border-box;
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
+.button-wrapper:hover {
+    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 2px rgba(0, 0, 0, 0.25);
 }
 
 .advantage-wrapper {
@@ -187,18 +199,28 @@ h3 {
     border: none;
     background-color: inherit;
     margin: 0 15px;
+    transition: 0.3s ease;
 }
 
 .arrow:hover {
-    filter: drop-shadow(2px 2px 2px rgb(124, 95, 117))
+    filter: drop-shadow(2px 2px 2px rgb(124, 95, 117));
+    cursor: pointer;
 }
 
 .arrow.left {
     justify-self: end;
 }
 
+.arrow.left:hover {
+    transform: translateX(-10px);
+}
+
 .arrow.right {
     justify-self: start;
+}
+
+.arrow.right:hover {
+    transform: translateX(10px);
 }
 
 .catalogue {
@@ -238,6 +260,11 @@ h3 {
     background-color: rgba(174, 124, 120, 0.6);
     padding: 10px;
     box-sizing: border-box;
+    transition: 0.3s;
+}
+
+.catalogue__link:hover {
+    background-color: rgba(174, 124, 120, 0.4);
 }
 
 .sale__wrapper {
@@ -357,11 +384,7 @@ h3 {
     text-align: center;
 }
 
-.contacts {
-    position: relative;
-    padding-top: 50px;
-    padding-bottom: 80px;
-}
+.contacts {}
 
 .map {
     position: absolute;
