--- a/css/style.css
+++ b/css/style.css
@@ -384,26 +384,29 @@ h3 {
     text-align: center;
 }
 
-.contacts {}
-
-.map {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    z-index: -1;
+.contacts {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 40px;
+    gap: 10px;
 }
 
 .contact-card {
-    width: 386px;
-    margin-left: 230px;
+    min-width: 380px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     border: 1px solid #F7FAFC;
     background-color: #F7FAFC;
     border-radius: 12px;
-    padding: 35px 40px;
+    padding: 35px;
     box-sizing: border-box;
+}
+
+.contact-card-items {
+    list-style: none;
+    margin: 5px 0;
+    padding: 0;
 }
 
 .contact-card-item {
@@ -413,6 +416,16 @@ h3 {
 
 .contact-card-link {
     color: #AE7C78;
+}
+
+.contact-card-link:hover {
+    color: #634c4b;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
 }
 
 .footer-container {
